# brainshape

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  PLAN.md  README.md  brainshape.spec  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: build.yml  ci.yml
brain/: agent.py  batch.py  claude_code.py  cli.py  config.py  graph_db.py  kg_pipeline.py  mcp_client.py  mcp_server.py  notes.py  obsidian.py  server.py  settings.py  sync.py  tools.py  transcribe.py  vault.py  watcher.py
brainshape/: agent.py  batch.py  claude_code.py  cli.py  config.py  graph_db.py  kg_pipeline.py  mcp_client.py  mcp_server.py  notes.py  server.py  settings.py  sync.py  tools.py  transcribe.py
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.css  App.tsx
desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs
desktop/src/components/: Chat.tsx  CommandPalette.tsx  Editor.tsx  ErrorBoundary.tsx  GraphPanel.tsx  GraphView.tsx  MeetingRecorder.tsx  MemoryPanel.tsx  SearchPanel.tsx  SettingsPanel.tsx  SetupScreen.tsx  Sidebar.tsx  SyncStatus.tsx  VoiceRecorder.tsx
desktop/src/lib/: WikilinkComponents.tsx  api.ts  completions.ts  editorTheme.ts  inlineMarkdown.ts  remarkWikilinks.ts  tauri.ts  themes.ts  useAgentStream.ts  useVoiceRecorder.ts  useWikilinkClick.ts  wikilinks.ts
docs/: agent-tools.md  architecture.md  configuration.md  graph-design.md  kg-pipeline.md  notes-integration.md  obsidian-integration.md  release-process.md  security.md  vault-integration.md  walkthrough-status.md
scripts/: build-macos.sh  dev.sh  setup.sh
seed_notes/: About Me.md  Welcome.md
seed_notes/Tutorials/: Getting Started.md  Using the Agent.md  Writing Notes.md
tests/: conftest.py  test_agent.py  test_batch.py  test_claude_code.py  test_cli.py  test_config.py  test_graph_db.py  test_kg_pipeline.py  test_mcp_client.py  test_mcp_server.py  test_notes.py  test_obsidian.py  test_rename.py  test_server.py  test_settings.py  test_sync.py  test_tools.py  test_transcribe.py  test_trash.py  test_vault.py  test_watcher.py
