[project]
name = "brain"
version = "0.1.0"
description = "second braaaain"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "fastapi>=0.129.0",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.3",
    "langchain-mcp-adapters>=0.2.1",
    "langgraph>=1.0.8",
    "mlx-whisper>=0.4.3",
    "neo4j>=5.28.3",
    "neo4j-graphrag>=1.1.0",
    "pydantic-settings>=2.12.0",
    "python-frontmatter>=1.1.0",
    "python-multipart>=0.0.22",
    "sentence-transformers>=5.2.2",
    "sse-starlette>=3.2.0",
    "uvicorn>=0.40.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.5.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
    "ty>=0.0.16",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "--cov=brain --cov-report=term-missing"

[tool.ty.src]
exclude = ["tests/"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
